melhora estilizaçao cards

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       <button type="submit" onsubmit="submit()">Submit</button>
     </form>
     <hr />
-    <ul id="documentList"></ul>
+    <div id="documentList"></div>
     <script>
       async function getDocuments() {
         const response = await fetch("http://localhost:8001/filmes");
@@ -25,8 +25,35 @@
 
         list.innerHTML = "";
         documents.forEach((document) => {
-          list.innerHTML += `<li>Filme: ${document.filme} || Nota: ${document.nota}</li>`;
+          list.innerHTML += `
+          <div id=${document._id} class="filmCard">
+            <p><b>Filme:</b> ${document.filme}</p>
+            <p><b>Nota:</b> ${document.nota}</p>
+            <span style="display: none">${document._id}</span>
+            <button>🖊</button>
+            <button class="deleteButton" onClick="deleteFilm()">❌</button>
+          </div>`;
         });
+      }
+
+      function getId() {
+        const buttons = document.querySelectorAll(".deleteButton");
+        var currentId;
+
+        buttons.forEach((button) => {
+          button.addEventListener("click", (event) => {
+            currentId = button.closest("div").id;
+          });
+        });
+
+        return currentId;
+      }
+
+      function editFilm() {}
+
+      function deleteFilm() {
+        let item = getId();
+        console.log(item);
       }
 
       window.onload = getDocuments();
